Rewrite pack.js. Add resize events.

--- a/turnjs/index.html
+++ b/turnjs/index.html
@@ -15,17 +15,14 @@
 </head>
 <body>
 
-	<div class="header">
+	<!-- <div class="header">
 		<div class="shortcut">
-			<!-- <a href="#" class="mag-btn mag-btn-zoomin"><i class="icon-zoom-in"></i> 放大</a>
-			<a href="#" class="mag-btn mag-btn-zoomout"><i class="icon-zoom-out"></i> 缩小</a> -->
-
 			<a href="#" class="mag-btn" id="mag-first">封面</a>
 			<a href="#" class="mag-btn" id="mag-preview"><i class="icon-chevron-up"></i> 上一页</a>
 			<a href="#" class="mag-btn" id="mag-next"><i class="icon-chevron-down"></i> 下一页</a>
 			<a href="#" class="mag-btn" id="mag-zoom"><i class="icon-chevron-down"></i> 改变大小</a>
 		</div>
-	</div>
+	</div> -->
 
 	<div class="wrapper" id="wrapper">
 		<div id="magazine-zoom" class="magazine-wrapper">
@@ -42,17 +39,21 @@
 
 	<div class="zoomlay" id="zoomlay">
 		<div class="page" id="zoomlay-page">
-			<!-- <img src="images/page1.jpg"> -->
 		</div>
 	</div>
 
-<!-- javascript Library -->
-<script type="text/javascript" src="lib/jquery.min.js"></script>
-<script type="text/javascript" src="lib/jquery/jquery.ui.min.js"></script>
-<script type="text/javascript" src="app/turn.min.js"></script>
-<!-- <script type="text/javascript" src="app/jquery.zoomooz.min.js"></script> -->
-<!-- <script type="text/javascript" src="app/jquery.zoom.js"></script> -->
-<script type="text/javascript" src="app/pack.js"></script>
+	<div class="toolkit" id="toolkit">
+		<a href="#" class="mag-btn" id="mag-first"><i class="icon-home"></i></a>
+		<a href="#" class="mag-btn" id="mag-preview"><i class="icon-chevron-up"></i></a>
+		<a href="#" class="mag-btn" id="mag-next"><i class="icon-chevron-down"></i></a>
+		<!-- <a href="#" class="mag-btn" id="mag-zoom"><i class="icon-retweet"></i></a> -->
+	</div>
+
+	<!-- javascript Library -->
+	<script type="text/javascript" src="lib/jquery.min.js"></script>
+	<script type="text/javascript" src="lib/jquery/jquery.ui.min.js"></script>
+	<script type="text/javascript" src="app/turn.min.js"></script>
+	<script type="text/javascript" src="app/pack.js"></script>
 
 </body>
 </html>
