--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>Welcome to my page.</h3>
-        <p>My Page is building.</p>
+        <p>我的主页正在设计中，估计在9月中旬上线。下面是我的电子邮件，minowu@foxmail.com</p>
+        <p>和一些简单的作品链接</p>
         <ul>
-          <li>电子邮件：minowu@foxmail.com</li>
+          <li><a href="http://www.atjiehun.com">AT结婚网</a></li>
+          <li><a href="/mebasic">MeBasic，一个简单的UI框架</a></li>
+          <li><a href="/turnjs">杂志翻页效果</a></li>
+          <li><a href="/evipath/1.png">Evipath，一个医疗项目的表单创建页面</a></li>
         </ul>
       </section>
     </div>
