添加新建窗口。

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <p>我的主页正在设计中，估计在9月中旬上线。下面是我的电子邮件，minowu@foxmail.com</p>
         <p>和一些简单的作品链接</p>
         <ul>
-          <li><a href="http://www.atjiehun.com">AT结婚网</a></li>
-          <li><a href="/mebasic">MeBasic，一个简单的UI框架</a></li>
-          <li><a href="/turnjs">杂志翻页效果</a></li>
-          <li><a href="/evipath/1.png">Evipath，一个医疗项目的表单创建页面</a></li>
+          <li><a href="http://www.atjiehun.com" target="_blank">AT结婚网</a></li>
+          <li><a href="/mebasic" target="_blank">MeBasic，一个简单的UI框架</a></li>
+          <li><a href="/turnjs" target="_blank">杂志翻页效果</a></li>
+          <li><a href="/evipath/1.png" target="_blank">Evipath，一个医疗项目的表单创建页面</a></li>
         </ul>
       </section>
     </div>
